--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <div id="banner">
         <div class="img-list img-wrapper">
             <div class="img-box">
-                <img src="./asset/tupian/1123.png" alt="" onclick="window.location.href='file:///D:/wangzhi/changshi/shiyan/elliptical-rotation-chart-master%20(1)/elliptical-rotation-chart-master/index2.html'">
+                <img src="./asset/tupian/1123.png" alt="" onclick="window.location.href='./index2.html'">
             </div>
             <div class="img-box">
-                <img src="./asset/tupian/tupian-1.jpg" alt="" onclick="window.location.href='file:///D:/wangzhi/changshi/shiyan/elliptical-rotation-chart-master%20(1)/elliptical-rotation-chart-master/index2.html'">
+                <img src="./asset/tupian/tupian-1.jpg" alt="" onclick="window.location.href='./index2.html'">
             </div>
             <div class="img-box">
-                <img src="./asset/tupian/tupian-2.jpg" alt="" onclick="window.location.href='file:///D:/wangzhi/changshi/shiyan/elliptical-rotation-chart-master%20(1)/elliptical-rotation-chart-master/index2.html'">
+                <img src="./asset/tupian/tupian-2.jpg" alt="" onclick="window.location.href='./index2.html'">
             </div>
             <div class="img-box">
-                <img src="./asset/tupian/tupian-6.jpg" alt="" onclick="window.location.href='file:///D:/wangzhi/changshi/shiyan/elliptical-rotation-chart-master%20(1)/elliptical-rotation-chart-master/index2.html'">
+                <img src="./asset/tupian/tupian-6.jpg" alt="" onclick="window.location.href='./index2.html'">
             </div>
             <div class="img-box">
-                <img src="./asset/tupian/tupian-4.jpg" alt="" onclick="window.location.href='file:///D:/wangzhi/changshi/shiyan/elliptical-rotation-chart-master%20(1)/elliptical-rotation-chart-master/index2.html'">
+                <img src="./asset/tupian/tupian-4.jpg" alt="" onclick="window.location.href='./index2.html'">
             </div>
             <div class="img-box" id="last-img-box">
-                <img src="./asset/tupian/tupian-5.jpg" alt="" onclick="window.location.href='file:///D:/wangzhi/changshi/shiyan/elliptical-rotation-chart-master%20(1)/elliptical-rotation-chart-master/index2.html'">
+                <img src="./asset/tupian/tupian-5.jpg" alt="" onclick="window.location.href='./index2.html'">
             </div>
         </div>
     </div>
